# RemoteExecutor

./: .gitmodules  Cargo.toml  README.md
.github/workflows/: build-packages.yml
src/: exec.rs  exec_support.rs  fs_ops.rs  lib.rs  patch.rs  rg.rs  shell_manager.rs  stdio.rs  tool.rs  websocket.rs
src/caller/: mcp.rs  mod.rs
src/executor/: mod.rs
tests/: caller.rs  fs_ops.rs  mcp.rs  shared_endpoint.rs  stdio.rs  timeout.rs
