[package]
name = "remote_executor"
version = "0.1.0"
edition = "2021"

# Keep this project independent from the sibling pty-t workspace.
[workspace]

[[bin]]
name = "remote-executor-demo"
path = "src/bin/demo.rs"

[[bin]]
name = "remote-executor-stdio"
path = "src/bin/stdio.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
futures-util = "0.3"
globset = "0.4"
grep-matcher = "0.1"
grep-regex = "0.1"
grep-searcher = "0.1"
ignore = "0.4"
pty_t_core = { path = "vendor/pty-t/crates/core" }
pty_t_protocol = { path = "vendor/pty-t/crates/protocol" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.29"

[dev-dependencies]
tempfile = "3"
