[package]
name = "remote_executor"
version = "0.1.1"
edition = "2021"

# Keep this project independent from the vendored pty-t workspace.
[workspace]

[[bin]]
name = "remote-executor"
path = "src/bin/executor.rs"

[[bin]]
name = "remote-caller"
path = "src/bin/caller.rs"

[[bin]]
name = "remote-caller-mcp"
path = "src/bin/caller_mcp.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
futures-util = "0.3"
diffy = "0.5"
globset = "0.4"
grep-matcher = "0.1"
grep-regex = "0.1"
grep-searcher = "0.1"
ignore = "0.4"
pty_t_core = { path = "vendor/pty-t/crates/core" }
pty_t_protocol = { path = "vendor/pty-t/crates/protocol" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.29"

[dev-dependencies]
tempfile = "3"
